Changes to make SimpleXlet run on the Vision Workbench.  Only tested with a debug version of GrinXlet.
The update is mostly about using pJava based APIs as opposed to PBP (such as adjusting util's collection classes and lack of Alpha in java.awt), in which the version of the Workbench we have seem to be based on.



git-svn-id: https://svn.java.net/svn/hdcookbook~svn@444 e5771d8f-0841-e040-ffdb-cc069419ffcf